fixed works thumbs spacing

--- a/b66bc23a4b206a1745bc3b54580c7c7cedbfd0bfa2ee543e90a766e745a003f6/sass/style.scss
+++ b/b66bc23a4b206a1745bc3b54580c7c7cedbfd0bfa2ee543e90a766e745a003f6/sass/style.scss
@@ -311,6 +311,8 @@ dl {
 
 // works alt style
 .box-group.box-group-works {
+  margin-bottom: 1rem;
+  
   .box-group-item {
     width: 100%;
     overflow: hidden;
@@ -322,8 +324,8 @@ dl {
   .box-group-image {
     display: block;
     transition: transform .2s ease-out;
-    margin: 5% auto;
-    width: 90%;
+    margin: 3% auto;
+    width: 93%;
   }
   .box-group-inner {
     position: absolute;
